k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: workcopilot
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
